<resources>
    <string name="app_name">自由量大</string>

    <string name="sig_s">打卡</string>
    <string name="sig_n">量大健康打卡</string>
    <string name="sig_b">--</string>
    <string name="sig">sign</string>
    <string name="pass_s">通行码</string>
    <string name="pass_n">量大通行码</string>
    <string name="pass_b">--</string>
    <string name="pass">pass</string>
    <string name="title_activity_editor">editorActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>